--- a/MultivariableCalculus/source.tex
+++ b/MultivariableCalculus/source.tex
@@ -9,6 +9,7 @@
     \graphicspath{{"Chapter 11/Section 11.1/images/"}}
     \input{"Chapter 11/Section 11.1/source.tex"}
     \input{"Chapter 11/Section 11.2/source.tex"}
+    \graphicspath{{"Chapter 11/Section 11.3/images/"}}
     \input{"Chapter 11/Section 11.3/source.tex"}
     \input{"Chapter 11/Section 11.4/source.tex"}
     \input{"Chapter 11/Section 11.5/source.tex"}
