--- a/source.tex
+++ b/source.tex
@@ -17,6 +17,7 @@
     \graphicspath{{"MultivariableCalculus/Chapter 11/Section 11.1/images/"}}
     \input{"MultivariableCalculus/Chapter 11/Section 11.1/source.tex"}
     \input{"MultivariableCalculus/Chapter 11/Section 11.2/source.tex"}
+    \graphicspath{{"MultivariableCalculus/Chapter 11/Section 11.3/images/"}}
     \input{"MultivariableCalculus/Chapter 11/Section 11.3/source.tex"}
     \input{"MultivariableCalculus/Chapter 11/Section 11.4/source.tex"}
     \input{"MultivariableCalculus/Chapter 11/Section 11.5/source.tex"}
