--- a/MultivariableCalculus/source.tex
+++ b/MultivariableCalculus/source.tex
@@ -3,6 +3,7 @@
 \newpage
 
 \pagenumbering{arabic}
+\pagestyle{plain}
 
 \part{Multivariable Calculus}
   \chapter{Parametric Equations and Polar Coordinates}
@@ -12,6 +13,7 @@
     \graphicspath{{"Chapter 11/Section 11.3/images/"}}
     \input{"Chapter 11/Section 11.3/source.tex"}
     \input{"Chapter 11/Section 11.4/source.tex"}
+    \graphicspath{{"Chapter 11/Section 11.5/images/"}}
     \input{"Chapter 11/Section 11.5/source.tex"}
     \input{"Chapter 11/Section 11.6/source.tex"}
 
