--- a/source.tex
+++ b/source.tex
@@ -10,6 +10,7 @@
 \newpage
 
 \pagenumbering{arabic}
+\pagestyle{plain}
 
 \setcounter{chapter}{10}
 \part{Multivariable Calculus}
@@ -20,6 +21,7 @@
     \graphicspath{{"MultivariableCalculus/Chapter 11/Section 11.3/images/"}}
     \input{"MultivariableCalculus/Chapter 11/Section 11.3/source.tex"}
     \input{"MultivariableCalculus/Chapter 11/Section 11.4/source.tex"}
+    \graphicspath{{"MultivariableCalculus/Chapter 11/Section 11.5/images/"}}
     \input{"MultivariableCalculus/Chapter 11/Section 11.5/source.tex"}
     \input{"MultivariableCalculus/Chapter 11/Section 11.6/source.tex"}
 
