--- a/MultivariableCalculus/source.tex
+++ b/MultivariableCalculus/source.tex
@@ -19,6 +19,7 @@
     \input{"Chapter 11/Section 11.6/source.tex"}
 
   \chapter{Infinite Sequences and Series}
+    \graphicspath{{"Chapter 12/Section 12.1/images/"}}
     \input{"Chapter 12/Section 12.1/source.tex"}
     \input{"Chapter 12/Section 12.2/source.tex"}
     \input{"Chapter 12/Section 12.3/source.tex"}
