--- a/source.tex
+++ b/source.tex
@@ -27,6 +27,7 @@
     \input{"MultivariableCalculus/Chapter 11/Section 11.6/source.tex"}
 
   \chapter{Infinite Sequences and Series}
+    \graphicspath{{"MultivariableCalculus/Chapter 12/Section 12.1/images/"}}
     \input{"MultivariableCalculus/Chapter 12/Section 12.1/source.tex"}
     \input{"MultivariableCalculus/Chapter 12/Section 12.2/source.tex"}
     \input{"MultivariableCalculus/Chapter 12/Section 12.3/source.tex"}
