--- a/source.tex
+++ b/source.tex
@@ -30,6 +30,7 @@
     \graphicspath{{"MultivariableCalculus/Chapter 12/Section 12.1/images/"}}
     \input{"MultivariableCalculus/Chapter 12/Section 12.1/source.tex"}
     \input{"MultivariableCalculus/Chapter 12/Section 12.2/source.tex"}
+    \graphicspath{{"MultivariableCalculus/Chapter 12/Section 12.3/images/"}}
     \input{"MultivariableCalculus/Chapter 12/Section 12.3/source.tex"}
     \input{"MultivariableCalculus/Chapter 12/Section 12.4/source.tex"}
     \input{"MultivariableCalculus/Chapter 12/Section 12.5/source.tex"}
