--- a/MultivariableCalculus/source.tex
+++ b/MultivariableCalculus/source.tex
@@ -22,6 +22,7 @@
     \graphicspath{{"Chapter 12/Section 12.1/images/"}}
     \input{"Chapter 12/Section 12.1/source.tex"}
     \input{"Chapter 12/Section 12.2/source.tex"}
+    \graphicspath{{"Chapter 12/Section 12.3/images/"}}
     \input{"Chapter 12/Section 12.3/source.tex"}
     \input{"Chapter 12/Section 12.4/source.tex"}
     \input{"Chapter 12/Section 12.5/source.tex"}
