--- a/MultivariableCalculus/source.tex
+++ b/MultivariableCalculus/source.tex
@@ -36,6 +36,7 @@
     \input{"Chapter 12/Section 12.12/source.tex"}
 
   \chapter{Vectors and the Geometry of Space}
+    \graphicspath{{"Chapter 13/Section 13.1/images/"}}
     \input{"Chapter 13/Section 13.1/source.tex"}
     \input{"Chapter 13/Section 13.2/source.tex"}
     \input{"Chapter 13/Section 13.3/source.tex"}
