--- a/source.tex
+++ b/source.tex
@@ -44,6 +44,7 @@
     \input{"MultivariableCalculus/Chapter 12/Section 12.12/source.tex"}
 
   \chapter{Vectors and the Geometry of Space}
+    \graphicspath{{"MultivariableCalculus/Chapter 13/Section 13.1/images/"}}
     \input{"MultivariableCalculus/Chapter 13/Section 13.1/source.tex"}
     \input{"MultivariableCalculus/Chapter 13/Section 13.2/source.tex"}
     \input{"MultivariableCalculus/Chapter 13/Section 13.3/source.tex"}
