--- a/MultivariableCalculus/source.tex
+++ b/MultivariableCalculus/source.tex
@@ -38,6 +38,7 @@
   \chapter{Vectors and the Geometry of Space}
     \graphicspath{{"Chapter 13/Section 13.1/images/"}}
     \input{"Chapter 13/Section 13.1/source.tex"}
+    \graphicspath{{"Chapter 13/Section 13.2/images/"}}
     \input{"Chapter 13/Section 13.2/source.tex"}
     \input{"Chapter 13/Section 13.3/source.tex"}
     \input{"Chapter 13/Section 13.4/source.tex"}
