--- a/source.tex
+++ b/source.tex
@@ -46,6 +46,7 @@
   \chapter{Vectors and the Geometry of Space}
     \graphicspath{{"MultivariableCalculus/Chapter 13/Section 13.1/images/"}}
     \input{"MultivariableCalculus/Chapter 13/Section 13.1/source.tex"}
+    \graphicspath{{"MultivariableCalculus/Chapter 13/Section 13.2/images/"}}
     \input{"MultivariableCalculus/Chapter 13/Section 13.2/source.tex"}
     \input{"MultivariableCalculus/Chapter 13/Section 13.3/source.tex"}
     \input{"MultivariableCalculus/Chapter 13/Section 13.4/source.tex"}
